k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-deployment
  labels:
    app: url-shortener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-shortener
  template:
    metadata:
      labels:
        app: url-shortener
    spec:
      containers:
      - name: url-shortener
        image: us-central1-docker.pkg.dev/url-shortener-gke/url-shortener-repo/url-shortener-image:latest
        ports:
        - containerPort: 4000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
      - name: cloud-sql-proxy
        image: gcr.io/cloud-sql-proxy/cloud-sql-proxy:2.8.0
        args:
        - "--instance=url-shortener-gke:us-central1:url-shortener-postgres=tcp:0.0.0.0:5432"
        ports:
        - containerPort: 5432
        securityContext:
          runAsNonRoot: true
